k8s/omada-controller/manifests/2-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: omada-controller
  namespace: default
spec:
  parentRefs:
    - name: envoy-gw
      sectionName: https
      namespace: default
  hostnames:
    - omada.tale.me
  rules:
    - backendRefs:
        - name: omada-controller
          port: 8043
